<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical" android:padding="6dip" android:background="#aaaaaa"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/query_editor_name_label_text" android:layout_marginLeft="6dip" android:layout_marginRight="6dip" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#000000"></TextView><EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/name" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceMedium" android:inputType="text"></EditText>
</LinearLayout>

<ListView android:layout_height="wrap_content" android:id="@android:id/list" android:layout_weight="1" android:layout_width="fill_parent"></ListView>
<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:gravity="center_vertical|center_horizontal" android:id="@android:id/empty" android:text="@string/query_editor_empty_text"></TextView><LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent" android:padding="6dip" android:background="#aaaaaa" android:gravity="center_horizontal"><Button android:layout_height="wrap_content" android:id="@+id/ok" android:text="@string/query_editor_save_button_text" android:layout_width="wrap_content"></Button>
</LinearLayout>


</LinearLayout>
